--- a/package.json
+++ b/package.json
@@ -40,7 +40,15 @@
   "author": "femitubosun",
   "license": "MIT",
   "devDependencies": {
+    "@types/node": "^24.9.1",
+    "biome": "^0.3.3",
     "tsup": "^8.5.0",
     "typescript": "^5.9.3"
+  },
+  "dependencies": {
+    "chalk": "^5.6.2",
+    "pino": "^10.1.0",
+    "pino-pretty": "^13.1.2",
+    "zod": "^4.1.12"
   }
 }
