--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "@fatehq/pulse",
+  "name": "the-pulse",
   "description": "Type-safe business action framework for sync and async operations.",
   "version": "0.0.2",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
-  "homepage": "https://github.com/fatehq/pulse",
+  "homepage": "https://github.com/femitubosun/pulse",
   "publishConfig": {
     "access": "public"
   },
   "repository": {
-    "url": "https://github.com/fatehq/pulse"
+    "url": "https://github.com/femitubosun/pulse"
   },
   "scripts": {
     "build": "tsup"
@@ -46,7 +46,9 @@
     "typescript": "^5.9.3"
   },
   "dependencies": {
+    "bullmq": "^5.61.0",
     "chalk": "^5.6.2",
+    "ioredis": "^5.8.2",
     "pino": "^10.1.0",
     "pino-pretty": "^13.1.2",
     "zod": "^4.1.12"
